# soliditylings_security

./: .gitattributes  .gitmodules2  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.ps1  install.sh  oranda.json
.github/workflows/: rust.yml
cache/: solidity-files-cache.json
soliditylings_security/: AUTHORS.md  Cargo.toml  info2.toml
soliditylings_security/exercises/reentrancy/: reentrancy1.sol
soliditylings_security/exercises/txOrigin/: txOrigin1.sol
soliditylings_security/src/: exercise.rs  main.rs  run.rs  verify.rs
soliditylings_security/test/reentrancy/: reentrancy1.t.sol
soliditylings_security/test/txOrigin/: txOrigin1.t.sol
src/: exercise.rs  main.rs
