[package]
name = "soliditylings"
description = "Small exercises to get you used to learning smart contract vulnerabilities!"
version = "5.6.1"
authors = [
  "Alysia <hi@alysia.tech>",
  "Liv <mokou@fastmail.com>",
  "Carol (Nichols || Goulding) <carol.nichols@gmail.com>",
]

edition = "2021"

[dependencies]
indicatif = "0.17.6"
console = "0.15"
notify = "4.0"
toml = "0.7.6"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
home = "0.5.3"
glob = "0.3.0"
clap = { version = "4.4.0", features = ["derive"] }

[[bin]]
name = "soliditylings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
glob = "0.3.0"
